--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply font-sans;
+  }
+}
+
+.container {
+  @apply mx-auto;
+  @apply max-w-[1440px];
+}
