--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -43,3 +43,11 @@ input[type="radio"] {
 input[type="radio"]:checked {
   background-color: #520B1F;
 }
+.menu-avatar .dropdown {
+  height: 0;
+  transition: height 0.2s ease;
+}
+.menu-avatar:hover > .dropdown {
+  height: 110px;
+  /* @apply !border; */
+}
